--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -88,4 +88,24 @@
         <item>CHANNEL_NIGHTLY</item>
     </string-array>
 
+    <string-array name="timeout_texts" translatable="false">
+        <item>@string/one_command</item>
+        <item>1</item>
+        <item>3</item>
+        <item>5</item>
+        <item>15</item>
+        <item>30</item>
+        <item>60</item>
+    </string-array>
+
+    <string-array name="timeout_values" translatable="false">
+        <item>-1</item>
+        <item>1</item>
+        <item>3</item>
+        <item>5</item>
+        <item>15</item>
+        <item>30</item>
+        <item>60</item>
+    </string-array>
+
 </resources>
